1999-11-03  Federico Mena Quintero  <federico@redhat.com>

	* src/gnome-canvas-pixbuf.c (gnome_canvas_pixbuf_point): I'm a
	doofus.  Return a distance, not a boolean, for opaque images.

	* src/gnome-canvas-pixbuf.c (recompute_bounding_box): Do proper
	rounding of bounding box coordinates.
	(gnome_canvas_pixbuf_bounds): Implemented the ::bounds() method.
	(gnome_canvas_pixbuf_draw): Use the correct alpha threshold value.

1999-11-03  Jonathan Blandford  <jrb@redhat.com>

	* src/io-gif.c (gif_prepare_lzw): s/lwz/lzw/g

1999-11-03  Michael Fulbright  <drmike@redhat.com>

	* src/io-jpg.c image_load_increment(): Fixed code which moved
	buffer around as new data comes in to work properly. JPEG progressive
	loading should be working now except for grayscale JPEG's, which I
	will look into next.

1999-11-03    <sopwith@redhat.com>
	* src/testpixbuf.c: A GtkFunction needs to return a value for deterministic behaviour.
	  Also put dot printing back in.

1999-11-03    <jrb@redhat.com>

	* src/io-gif.c (gif_get_extension): Read 'til the next empty block
	correctly, now.

1999-11-02  Cody Russell  <bratsche@dfw.net>
	* src/gdk-pixbuf-drawable.c: Changed the behavior to return NULL
	if part of the requested image is offscreen, rather than clipping
	the image.

1999-11-02  Jonathan Blandford  <jrb@redhat.com>

	* src/io-gif.c (gif_fill_in_lines): Fill in the gif's blank areas
	for interlacing and progressive loading.

1999-11-02  Cody Russell  <bratsche@dfw.net>
	* src/gdk-pixbuf-drawable.c (gdk_pixbuf_from_drawable_core): Now
	calls gdk_pixbuf_new_from_art_pixbuf() instead of gdk_pixbuf_new().

1999-11-02  Jonathan Blandford  <jrb@redhat.com>

	* src/io-gif.c (gif_main_loop): Now progressive gif loading works!
	It's a little slow though. )-:

1999-11-02 Elliot Lee <sopwith@redhat.com>
	* src/gdk-pixbuf-loader.[ch], src/gdk-pixbuf-io.h: Make the arguments to the
	write/load_increment operations const-correct.

1999-11-02  Federico Mena Quintero  <federico@redhat.com>
